# DEploid

./: DESCRIPTION  MD5
inst/doc/: dEploid-Arguments.R  dEploid-Arguments.html
src/: registerDynamicSymbol.c
src/DEploid/: io_unit_tests-dEploidIO.gcno  io_unit_tests-ibd.gcno  io_unit_tests-mcmc.gcno  io_unit_tests-panel.gcno  io_unit_tests-txtReader.gcno  io_unit_tests-updateHap.gcno  io_unit_tests-utility.gcno  io_unit_tests-variantIndex.gcno  io_unit_tests-vcfReader.gcno  unit_tests-dEploidIO.gcno  unit_tests-ibd.gcno  unit_tests-mcmc.gcno  unit_tests-panel.gcno  unit_tests-txtReader.gcno  unit_tests-updateHap.gcno  unit_tests-utility.gcno  unit_tests-variantIndex.gcno  unit_tests-vcfReader.gcno
src/DEploid/export/: io_unit_tests-dEploidIOExport.gcno  io_unit_tests-dEploidIOExportPosteriorProb.gcno  io_unit_tests-writeMcmcRelated.gcno  unit_tests-dEploidIOExport.gcno  unit_tests-dEploidIOExportPosteriorProb.gcno  unit_tests-writeMcmcRelated.gcno
src/DEploid/gzstream/: io_unit_tests-gzstream.gcno  unit_tests-gzstream.gcno
src/DEploid/lasso/: io_unit_tests-dEploidLasso.gcno  io_unit_tests-lasso.gcno  unit_tests-dEploidLasso.gcno  unit_tests-lasso.gcno
src/DEploid/random/: io_unit_tests-fastfunc.gcno  io_unit_tests-mersenne_twister.gcno  io_unit_tests-random_generator.gcno  unit_tests-fastfunc.gcno  unit_tests-mersenne_twister.gcno  (+1 more)
src/DEploid/src/vcf/: CPPLINT.cfg  Makefile.am  README.md  configure.ac
tests/testthat/: pf3k-dEploid.hap  pf3k-dEploid.llk  pf3k-dEploid.prop  test-DEploid_tools.R
vignettes/: dEploid-Arguments.Rmd
(+1 files in other folders)
